# cos498-agents

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  SPECS.md
src/voicefront/: main.py
src/voicefront/agents/: base.py  conflict_resolver.py  intent_parser.py  orchestrator.py  reviewer.py  validator.py  writer.py
src/voicefront/events/: bus.py
src/voicefront/server/: client.html  reload.py
tests/: test_agents.py  test_conflict_resolver.py  test_events.py  test_intent_parser.py  test_orchestrator.py  test_parallel.py  test_reviewer.py  test_server.py  test_validator.py  test_writer.py
