[project]
name = "voicefront"
version = "0.1.0"
description = "Voice-driven frontend development with AI agents"
requires-python = ">=3.9"
dependencies = [
    "anthropic",
    "websockets",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
